# argus

./: ARCHITECTURE.md  README.md  docker-compose.yml  start-argus.ps1
.github/workflows/: ci-cd.yml
backend/: pyproject.toml
backend/api_gateway/: database.py  main.py
backend/api_gateway/websocket/: manager.py
backend/ingestion/: main.py
backend/ingestion/api/v1/: router.py
backend/ingestion/api/v1/endpoints/: ingest.py
backend/ingestion/core/: config.py  logging.py
backend/ingestion/models/: schemas.py
backend/ingestion/services/: kafka_producer.py  rate_limiter.py  schema_registry.py
backend/processor/: main.py
backend/processor/ml/models/: isolation_forest.py  lstm_autoencoder.py
backend/simulator/: main.py
backend/simulator/generators/: nexus_manufacturing.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/multi-agent/: ArgusShowcase.css  page.tsx
frontend/src/app/sensors/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/dashboard/: ExportMenu.tsx  SimulatorControls.tsx  TimeRangePicker.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: Skeleton.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: demoSimulator.ts  utils.ts
frontend/src/store/: dashboardStore.ts
infrastructure/kubernetes/deployments/: backend.yaml
schemas/avro/: alert_event.avsc  sensor_reading.avsc
(+3 files in other folders)
