[tool.poetry]
name = "argus-backend"
version = "0.1.0"
description = "Backend services for Argus Real-Time Data Pipeline"
authors = ["Argus Team"]
readme = "README.md"
packages = [
    { include = "ingestion" },
    { include = "processor" },
    { include = "alerting" },
    { include = "api_gateway" },
    { include = "simulator" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
confluent-kafka = "^2.3.0"
fastavro = "^1.8.4"
bytewax = "^0.18.1"
scikit-learn = "^1.3.2"
tensorflow = "^2.15.0"
river = "^0.21.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
websockets = "^12.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
locust = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
